# RiffleScrambler

./: .gitignore  README.md
cpp/: CMakeLists.txt  main.cpp  riffle_shuffle.h
cpp/RiffleScrambler/: CMakeLists.txt
cpp/RiffleScrambler/include/riffle/: BinMatrix.h  PRBG.h  encoding.h  evaluate_graph.h  generate_graph.h  permutation_element.h  riffle_permutation.h  riffle_scrambler.h  riffle_scrambler_c.h  riffle_shuffle.h
cpp/RiffleScrambler/include/riffle/HashFunctions/: EVP_MD_Context_Adapter.h  HashElement.h  hashPRBG.h  md__utils.h  md_types.h  message_digests.h
cpp/RiffleScrambler/include/riffle/hash_functions/: EVP_MD_Context_Adapter.h  HashElement.h  (+6 more)
cpp/RiffleScrambler/src/: BinMatrix.cpp  base64.cpp  encoding.cpp  evaluate_graph.cpp  generate_graph.cpp  riffle_permutation.cpp  riffle_scrambler.cpp  riffle_scrambler_c_wrapper.cpp  riffle_shuffle.cpp
cpp/RiffleScrambler/src/HashFunctions/: EVP_MD_Context_Adapter.cpp  HashElement.cpp  hashPRBG.cpp  md_utils.cpp
cpp/RiffleScrambler/src/hash_functions/: EVP_MD_Context_Adapter.cpp  HashResult.cpp  hashPRBG.cpp  md_utils.cpp
cpp/benchmark/: CMakeLists.txt  benchmark.cpp  progress_bar.cpp  riffle_scrambler.cpp  run_benchmarks.sh  utils.cpp  utils.py
cpp/benchmark/plots/: plot_results.py
cpp/cli/: CMakeLists.txt  rf.cpp  rs.cpp
cpp/include/: BinMatrix.h  evaluate_graph.h  generate_graph.h  permutation_element.h  riffle_permutation.h  riffle_shuffle.h
cpp/include/HashFunctions/: HashElement.h
cpp/src/: BinMatrix.cpp  evaluate_graph.cpp  generate_graph.cpp  main.cpp  riffle_permutation.cpp  riffle_shuffle.cpp
cpp/src/HashFunctions/: EVP_MD_Context_Adapter.cpp  HashElement.cpp
cpp/test/: CMakeLists.txt  test.cpp  test_api.cpp  test_bin_matrix.cpp  test_evaluate_graph.cpp  test_generate_graph.cpp  test_main.cpp  test_permutation_element.cpp  test_riffle_permutation.cpp  test_riffle_scrambler.cpp  test_riffle_shuffle.cpp
cpp/test/utils/: bitReaderPRBG.cpp
(+37 files in other folders)
